refactor: :recycle: update counselor information handling in CounselSessionRepository