@@ -1,13 +1,5 @@
 package com.springboot.api.counselsession.repository;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Repository;
-
 import com.querydsl.core.BooleanBuilder;
 import com.querydsl.core.Tuple;
 import com.querydsl.core.types.dsl.CaseBuilder;
@@ -25,6 +17,11 @@ import com.springboot.api.counselsession.entity.QCounselSession;
 import com.springboot.api.counselsession.entity.QCounseleeConsent;
 import com.springboot.enums.CounselorStatus;
 import com.springboot.enums.ScheduleStatus;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Map;
+import org.springframework.stereotype.Repository;
 
 @Repository
 public class CounselSessionRepositoryImpl implements CounselSessionRepositoryCustom {
@@ -49,7 +46,7 @@ public class CounselSessionRepositoryImpl implements CounselSessionRepositoryCus
             .stream()
             .map(LocalDateTime::toLocalDate)
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -86,8 +83,14 @@ public class CounselSessionRepositoryImpl implements CounselSessionRepositoryCus
                 counselSession.scheduledStartDateTime,
                 counselSession.counselee.id,
                 counselSession.counselee.name,
-                counselSession.counselor.id,
-                counselSession.counselor.name,
+                new CaseBuilder()
+                    .when(counselSession.counselor.status.eq(CounselorStatus.INACTIVE))
+                    .then("")
+                    .otherwise(counselSession.counselor.id),
+                new CaseBuilder()
+                    .when(counselSession.counselor.status.eq(CounselorStatus.INACTIVE))
+                    .then("탈퇴사용자")
+                    .otherwise(counselSession.counselor.name),
                 counselSession.status,
                 counselCard.cardRecordStatus,
                 counseleeConsent.isConsent))
@@ -146,7 +149,7 @@ public class CounselSessionRepositoryImpl implements CounselSessionRepositoryCus
         }
         List<String> sessionIds = canceledSessions.stream()
             .map(tuple -> tuple.get(counselSession.id))
-            .collect(Collectors.toList());
+            .toList();
 
         List<String> affectedCounseleeIds = canceledSessions.stream()
             .map(tuple -> tuple.get(counselSession.counselee.id))
